[package]
name = "jigsaw"
version = "0.1.0"
authors = ["Ben White-Horne <kneasle@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# Use optimisations even on debug builds - compilation is pretty fast but the unoptimised wasm code
# is SLLLLOOOOOOOW
[profile.dev]
opt-level = 2

[profile.release]
opt-level = 2 # For WASM, opt-level 3 causes large code bloat but little speed up

[dependencies]
console_error_panic_hook = "0.1"
itertools = "0.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
eframe = "0.13"

[dependencies.bellframe]
path = "../bellframe/"
default_features = false # We don't need access to the method library (we'll do that ourselves)
features = ["serde"] # We do want to be able to serialise types from `Bellframe`
