[workspace]
members = ["jigsaw", "gui", "comp", "utils"]

# Use optimisations even on debug builds - compilation is pretty fast but the unoptimised wasm code
# is SLLLLOOOOOOOW
[profile.dev]
opt-level = 2

[profile.release]
opt-level = 2 # For WASM, opt-level 3 causes large code bloat but little speed up
