[package]
name = "jigsaw_comp"
version = "0.1.0"
authors = ["Ben White-Horne <kneasle@gmail.com>"]
edition = "2018"

[dependencies]
emath = "0.14"
index_vec = "0.1"
itertools = "0.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

jigsaw_utils = { path = "../utils" }

[dependencies.bellframe]
version = "0.3.0-alpha.2"
# path = "../../bellframe/"
default_features = false # We don't need access to the method library (we'll do that ourselves)
features = ["serde"] # We do want to be able to serialise types from `Bellframe`
