[package]
name = "proj_core"
version = "0.1.0"
authors = ["Ben White-Horne <kneasle@gmail.com>"]
edition = "2018"
description = "A core set of basic composing utils used by my 3rd year project."

[features]
serde = ["serde_crate"]

[dependencies]
itertools = "0.10.0"

# Reimport `serde` as `serde_crate` so we can use `serde` as a feature
[dependencies.serde_crate]
package = "serde"
version = "1.0"
optional = true
features = ["derive"]

[dev-dependencies]
proptest = "1.0"
