[package]
name = "proj"
version = "0.1.0"
authors = ["Ben White-Horne <kneasle@gmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
proj_core = { path = "../core" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
itertools = "0.10"
console_error_panic_hook = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]
