[package]
name = "jigsaw_utils"
version = "0.1.0"
authors = ["Ben White-Horne <kneasle@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

[dependencies.bellframe]
path = "../../bellframe/"
default_features = false # We don't need access to the method library (we'll do that ourselves)
features = ["serde"] # We do want to be able to serialise types from `Bellframe`
